<resources>
    <string name="app_name">newTest</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_oven">OvenActivity</string>
    <string name="title_activity_river">RiverActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_introduction">IntroductionActivity</string>
    <string name="title_activity_vid_go_to_apple_tree">VidGoToAppleTree</string>
    <string name="title_activity_vid_apple_askes_help">VidAppleAskesHelpActivity</string>
    <string name="title_activity_vid_apple_oven">VidAppleOvenActivity</string>
    <string name="title_activity_vid_oven_river">VidOvenRiverActivity</string>
    <string name="title_activity_vid_baba_yaga">VidBabaYagaActivity</string>
    <string name="title_activity_baba_yaga">BabaYagaActivity</string>
    <string name="title_activity_vid_escape">VidEscapeActivity</string>
    <string name="title_activity_vid_final">VidFinalActivity</string>


    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="opacity">Opacity</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="title_activity_oven_uhvat">OvenUhvatActivity</string>
    <string name="title_activity_reflective_one">ReflectiveOneActivity</string>
    <string name="title_activity_end">EndActivity</string>
    <string name="title_activity_reflective_two">ReflectiveTwoActivity</string>
    <string name="title_activity_reflective_three">ReflectiveThreeActivity</string>
</resources>
